--- a/Changes
+++ b/Changes
@@ -1,3 +1,17 @@
-0.1.0_24 (2014-06-13)
+0.1.0_25 (2014-05-01)
+
+    API Changes:
+       - None.
+
+   New Features:
+      - None.
+
+   Enhancements:
+      - None.
+
+   Bug Fixes:
+      - None.
+
+0.1.1 (2014-06-14)
 
     Initial Release.
